traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:35: error: Missing closing brace `}' assumed here
} 
^